<resources>
    <string name="app_name">Soonflyy-Tutor</string>
    <string name="track_selection_title">Select tracks</string>
    <string name="education_is_the_simple_soul_of_a_society_as_it">Education is the simple soul of a society as it passes from one generation to another</string>
    <string name="new_user_sign_up_now">New User? Sign Up Now</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="text_title">Text Title*</string>
    <string name="assignment_titile">Assignment Title*</string>
    <string name="Question">Question</string>
    <string name="File_submission">File Submission</string>
    <string name="status">Status</string>
    <string name="text">Text</string>
    <string name="Rs_symbol">\u20B9</string>
    <string name="choose_que">Choose Question ?</string>
    <string name="duration">Duration*</string>
    <string name="Timing">Timing*</string>
    <string name="date">Date*</string>
    <string name="close">Close</string>
    <string name="exit_msg">Are you sure you want to exit ?? </string>
    <string name="update">Update</string>
    <string name="title">Title</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="new_passowrd">New Passowrd</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_test">Create Test</string>
    <string name="create">Create</string>
    <string name="QUESTION_TEXT">Question * Text</string>
    <string name="change_password">Change Password</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="search_courses">Search for courses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="energy_matter_force_material_and_all_the_laws_related_to_them_the_typically_work_in_high_school">Energy, matter,force material and all the laws related to them the typically work in high school</string>
    <string name="live">Live</string>
    <string name="which_of_the_following">Which of the following is the longest Railway tunnel in the world?</string>
    <string name="which_of_the_following_1">1. Which of the following is the longest Railway tunnel in the world?</string>
    <string name="submit">Submit</string>
    <string name="quiz">Quiz</string>
    <string name="Create_NEW_aSSIGNMENT">Create New Assignment</string>
    <string name="Create_Quiz">Create Quiz</string>
    <string name="question">Question</string>
    <string name="answer_ley">Answer Key</string>
    <string name="description">Description</string>
    <string name="exam_duration_1_hour">Exam duration: 1 hour</string>
    <string name="remaining_time_58_30_00">Remaining time: <font color="#BC0032">58:30:00</font></string>
    <string name="courses">Courses</string>
    <string name="railway_completed_course_1_month">Railway Complete Course 1 month</string>
    <string name="ssc_chsl_exam">SSC CHSL Exam Series 2 months</string>
    <string name="ntpc_complete_month">NTPC Completed 1 month</string>
    <string name="course_name_ssc_chsl_complete_course"><b>Course Name:</b> SSC CHSL Complete Course</string>
    <string name="teacher_name_harisht_mishra"><b>Teacher Name:</b>  Harisht Mishra</string>
    <string name="course_code_hrty078"><b>Course Code:</b>  HRTY078</string>
    <string name="need_your_help_with_any_examination_and_with_subcciption">Need your help with any\nexamination and with\nsubscription</string>
    <string name="loreum_pushem_color_it_consulter_with_binplus">Loreum pushem color it consulter\nwith binplus loreum color</string>
    <string name="order_details">Order Details</string>
    <string name="inr_5000">Rs.5000</string>
    <string name="discounted_fee">Discount</string>
    <string name="inr_1000">Rs.1000</string>
    <string name="offline_payment">Offline Payment</string>
    <string name="inr_6000">Rs.6000</string>
    <string name="online_payment">Online Payment</string>
    <string name="total_amount">Total Amount</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="payment">Payment</string>
    <string name="confirm">Confirm</string>
    <string name="open">Open</string>
    <string name="favourite_teacher">Favourite Teacher</string>
    <string name="day_date">Day Date</string>
    <string name="user_name">User name</string>
    <string name="course_name">Course name</string>
    <string name="Enter_Course_Name">Enter Course Name</string>
    <string name="course_Name">Course Name*</string>
    <string name="create_your_course_here_we_go">Create Your Course , Here We Go !</string>
    <string name="enter_message">Enter Your Message Here </string>
    <string name="occupation">Occupation</string>
    <string name="rating">Rating :</string>
    <string name="Details">Details</string>
    <string name="course">Course</string>
    <string name="PDF">PDF</string>
    <string name="number">Number</string>
    <string name="gotolive">Go to Live</string>
    <string name="CourseName">Course Name  :</string>
    <string name="teacher_Name">Teacher Name  :</string>
    <string name="test_railway">Test series on Indian railway</string>
    <string name="test_navi">Test series on Indian navy</string>
    <string name="test_10th">Test series on chemistry 10th</string>
    <string name="free">Free</string>
    <string name="paid">Paid</string>
    <string name="price">Rs.15000/-</string>
    <string name="energy_matter">energy, matter, force, material, and all the laws related to them.They typically work in high school</string>
    <string name="enter_the_otp_sen_to_mobile_number">Enter the OTP Send to Mobile Number</string>
    <string name="start_timing">Start Time*</string>
    <string name="end_timing">End Time*</string>
    <string name="comment">Comment :</string>
    <string name="enter_amount">Enter Amount*</string>
    <string name="upload_file_string">Upload your file here, Choose multiple file for creating videolist</string>
    <string name="demo_video">Demo Videos</string>
    <string name="add_chapter">Add Chapter</string>
    <string name="chapter">Chapters</string>
    <string name="chapter_name">Chapter Name*</string>
    <string name="Enter_chapter_name">Enter Chapter Name</string>
    <string name="topic_name">Topic Name*</string>
    <string name="Enter_topic_name">Enter Topic Name</string>
    <string name="topic">Topics</string>
    <string name="add_topic">Add_Topics</string>
    <string name="video">Video</string>
    <string name="item_detail"> Through this, you can pause and extend your course for a certain number of days based on your course duration and easily continue with your college and semester exams, even if the college reopens in between the course.</string>

    <string name="welcome_to_simple_amp_exclusive"><![CDATA[Welcome To\n S.implee & Exclusive]]></string>
    <string name="welcom_name">Welcome to\nS.implee &amp; Exclusive</string>
    <string name="best_learing_platform_for_you">Best Learning Platform For You !</string>
    <string name="if_you_don_t_have_an_account_register">If you don\'t have an account?</string>
    <string name="if_you_don_t_have_an_account_login">If you don\'t have an account?Login</string>

    <string name="female">Female</string>
    <string name="please_do_not_share_this_otp_with_anyone">*Please do not share this OTP with anyone</string>
    <string name="let_s_start_learing">Let\'s start learning</string>
    <string name="upload_your_file_here_choose_file_form_your_device">Upload your file here,Choose file from your device</string>
    <string name="textcrete">Create a notice for your students  and keep them update </string>
    <string name="go_live">Go Live</string>
    <string name="upload_your_file_here_choose_multiple_files_from_your_device_pdf_docx">Upload your file here, choose multiple files from your device(.pdf,.docx)</string>
    <string name="add_basic_details">Add basic details</string>
    <string name="enter_here">Enter here</string>
    <string name="add_activity_details">Add activity details</string>
    <string name="you_want_to_unblock_this_account">You want to unblock this account</string>
    <string name="you_want_to_block_to_this_account">You want to block to this account</string>
    <string name="independent_tutor">This is section belongs to independent tutor</string>
    <string name="school_coaching_section"> This is a school / coaching section</string>
    <string name="school_coaching">School / Coaching</string>
    <string name="welcome_to_student_section">Welcome to\nStudent section</string>
    <string name="welcome_to_school_coaching_section">Welcome to\nSchool / Coaching section</string>
    <string name="welcome_to_independent_tutor_section">Welcome to\nIndependent tutor section</string>
    <string name="unigueid">Unique id and password has been sent to your registered Email and Mobile number</string>
    <string name="add_remark">Add Remark</string>
    <string name="all_subjects">All Subjects</string>
    <string name="information">This is a information for all the students. Your tests on coordinate geometry will be schedule please attend them on daily bases. Thank you</string>
    <string name="not_registered_yet">Not registered yet ?</string>
    <string name="find_out_school_coaching">Find out School/ Coaching</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="leave">Leave Status</string>
    <string name="create_course">Create Course</string>
    <string name="tutor">Tutor</string>
    <string name="login_please">Login Please</string>
    <string name="course_list">Course List</string>
    <string name="no_bookmarked_course_found">No bookmarked course found!</string>
    <string name="oops">oops!</string>
    <string name="no_course_found">No course found!</string>
    <string name="downloaded_videos">*You can watch downloaded videos without internet</string>
    <string name="no_download_video_found">No download video found!</string>
    <string name="explore_course">Explore Course</string>
    <string name="if_you_have_an_account">If you have an account?</string>
    <string name="login">Login</string>
    <string name="are_you_sure_to_logout">Are you sure to logout ?</string>
    <string name="video_title">Video Title*</string>
    <string name="recent_notice">Recent Notice</string>

    <string name="select_class">Select Class</string>
    <string name="select_section">Select Section</string>
    <string name="no_section_msg">Class has no section</string>
    <string name="no_class_msg">Class not available</string>
    <string name="app_name_txt"><![CDATA[S.Implee & Exclusive]]></string>
    <string name="note_title">Note Title*</string>
    <string name="course_creator">Course Creator</string>
    <string name="are_you_sure_you_want_to_unassign">Are you sure you want to unassign ?</string>
    <string name="you_can_assign_multiple">You can assign multiple courses to a single tutor</string>
    <string name="unassign">Unassign</string>
    <string name="change_cover_image">Upload Profile Photo</string>
    <string name="choose_here">Choose here</string>
    <string name="block">Block</string>
    <string name="nameInputString">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz</string>
    <string name="addressInputString">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz1234567890,</string>
    <string name="educationInputString">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz.</string>
    <string name="inputStringWithCommaSapace">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz,</string>


</resources>