<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Student_Pannel.MySubscriptionFragment">


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/refresh_subscription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rel_no_subscription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            >
            <LinearLayout
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/tv_bold"
                    android:text="@string/oops"
                   android:fontFamily="@font/sfuitext_bold"
                    android:textColor="@color/black"

                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/all_tvsize16"
                    android:text="@string/no_course_found"
                    android:fontFamily="@font/sfuitext_semibold"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:src="@drawable/no_subscription"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/explore_btn"
                    android:layout_width="200dp"
                    android:layout_height="45dp"
                    android:text="@string/explore_course"
                    android:textAllCaps="false"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/sfuitext_semibold"
                    android:gravity="center"/>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
                android:visibility="gone"
                android:orientation="vertical"
                android:id="@+id/rel_show_reclist"
                android:layout_width="match_parent"

                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                    android:textSize="@dimen/space_16sp"
                    android:text="@string/course_list"
                   android:fontFamily="@font/sfuitext_bold"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    />
            <androidx.recyclerview.widget.RecyclerView

                    android:id="@+id/rcy_subscription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:overScrollMode="never"
                    android:scrollbars="none"/>

        </LinearLayout>

    </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>