<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Student_Pannel.Video_Fragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/refresh_video">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <RelativeLayout

                    android:id="@+id/rel_no_video"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/oops"
                            android:textColor="@color/black"
                            android:textSize="@dimen/tv_bold"

                            android:textStyle="bold" />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:text="@string/no_download_video_found"
                            android:textColor="@color/black"
                            android:textSize="@dimen/all_tvsize16" />

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="150dp"
                            android:src="@drawable/no_subscription" />

                    <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/explore_btn"
                            android:layout_width="200dp"
                            android:layout_height="45dp"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:text="@string/explore_course"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="@dimen/all_tvsize16" />

                    <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            android:text="@string/downloaded_videos"
                            android:textColor="@color/black" />
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/lin_video_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rec_video"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/tv_download_watch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:text="@string/downloaded_videos"
                        android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>