<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".live.LiveClassesActivity">

    <include
        android:id="@+id/include"
        layout="@layout/custom_tool_bar_second" />



        <RelativeLayout
            android:id="@+id/rel_video"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_below="@id/include">

            <live.videosdk.rtc.android.VideoView
                android:id="@+id/localView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"/>

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Connecting..."
                android:textColor="@color/white" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/space_8dp"
                android:layout_marginTop="@dimen/space_8dp"
                android:layout_marginEnd="@dimen/space_8dp"
                android:layout_marginBottom="@dimen/space_8dp"
                android:background="@drawable/bg_button"
                android:backgroundTint="@color/graient2"
                android:drawableLeft="@drawable/ic_baseline_videocam_white_24dp"
                android:drawablePadding="@dimen/space_5dp"
                android:gravity="center"
                android:paddingHorizontal="@dimen/space_10dp"
                android:text="@string/live"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <ImageView
                android:id="@+id/iv_screen_rotation"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_screen_rotation_24"/>
        </RelativeLayout>
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/rel_video"-->
<!--        android:orientation="vertical">-->

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_below="@id/rel_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/space_10dp"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16dp"

            android:text="@string/description"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/space_14sp" />
            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_16dp"
               android:layout_marginEnd="@dimen/space_16dp"
                android:text="Duration: 40 min"
                android:textColor="@color/black"
                android:textSize="@dimen/space_14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16dp"
            android:layout_marginTop="@dimen/space_10dp"
            android:layout_marginEnd="@dimen/space_16dp"
            android:text="@string/energy_matter_force_material_and_all_the_laws_related_to_them_the_typically_work_in_high_school"
            android:textColor="@color/darkgray"
            android:textSize="14sp" />
        <include
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            layout="@layout/layout_for_participaint_live_control"/>
        </LinearLayout>

<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:background="@color/light_gray" />-->



<!--    </LinearLayout>-->

</RelativeLayout>